<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".Register">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Registro"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignBaseline="@id/Nombre"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/Nombre"
        android:ems="10"
        android:hint="@string/introducir_nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#795548"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/Nombre"
        android:layout_alignStart="@id/Nombre"
        android:gravity="center"
        android:text="@string/mail"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignBaseline="@id/email"
        android:layout_alignStart="@id/campoNombre"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/Nombre"
        android:ems="10"
        android:hint="@string/introducir_email"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#795548"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/Contrasegna"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/email"
        android:layout_alignStart="@id/Nombre"
        android:gravity="center"
        android:text="@string/contrasegna"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Contrasegna"
        android:layout_alignStart="@id/campoNombre"
        android:ems="10"
        android:hint="@string/introducir_contrasegna"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#795548"
        tools:ignore="Autofill,TextFields,TextContrastCheck" />

    <TextView
        android:id="@+id/repetirContraseña"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/Contrasegna"
        android:layout_alignStart="@id/Contrasegna"
        android:gravity="center"
        android:text="@string/repetir_contrasena"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoRepetirContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/repetirContraseña"
        android:layout_alignStart="@id/campoNombre"
        android:ems="10"
        android:hint="@string/repetir_contrasegna"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#795548"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/sex1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/repetirContraseña"
        android:layout_alignStart="@id/Nombre"
        android:gravity="center"
        android:text="@string/sexo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/Sex_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/campoRepetirContraseña"
        android:layout_alignStart="@id/campoNombre"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Hombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/hombre"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/Mujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:buttonTint="@color/black"
            android:text="@string/mujer"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/Pais"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/sex1"
        android:layout_alignStart="@id/Nombre"
        android:gravity="center"
        android:text="@string/nacionalidad"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/EscogeNacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Pais"
        android:layout_alignStart="@id/campoNombre"
        android:layout_alignEnd="@id/campoNombre"
        android:entries="@array/Nacionalidad"
        android:minHeight="48dp"
        android:scrollbarSize="16dp" />

    <TextView
        android:id="@+id/Aficion"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/Pais"
        android:layout_alignStart="@id/Nombre"
        android:gravity="center"
        android:text="@string/aficiones"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/Cine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Aficion"
        android:layout_alignStart="@id/campoNombre"
        android:buttonTint="@color/black"
        android:minHeight="48dp"
        android:text="@string/cine"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/Musica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Aficion"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@id/Cine"
        android:buttonTint="@color/black"
        android:minHeight="48dp"
        android:text="@string/m_sica"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/Deporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Cine"
        android:layout_alignStart="@id/Cine"
        android:buttonTint="@color/black"
        android:minHeight="48dp"
        android:text="@string/deporte"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/Naturaleza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Musica"
        android:layout_alignStart="@id/Musica"
        android:buttonTint="@color/black"
        android:minHeight="48dp"
        android:text="@string/naturaleza"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/CVResumen"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/Naturaleza"
        android:layout_alignStart="@id/Nombre"
        android:gravity="center"
        android:text="@string/cv_resumido"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/CVResumido"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_below="@id/CVResumen"
        android:layout_alignStart="@id/Nombre"
        android:layout_marginEnd="16dp"
        android:background="@drawable/style_borde"
        android:gravity="center"
        android:hint="@string/resumen"
        android:textColor="@color/black"
        android:textColorHint="@color/azulmarino"
        tools:ignore="Autofill,TextFields" />

    <ImageButton
        android:id="@+id/Cancelar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@id/CVResumido"
        android:layout_alignStart="@id/Nombre"
        android:background="@color/gris"
        android:contentDescription="@string/cancelar"
        android:scaleType="centerInside"
        android:src="@drawable/cancelar96" />

    <ImageButton
        android:id="@+id/Registrar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@id/CVResumido"
        android:layout_alignEnd="@id/CVResumido"
        android:background="@color/gris"
        android:scaleType="centerInside"
        android:src="@drawable/check96"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />


</RelativeLayout>